@@ -48,8 +48,7 @@ import com.publicissapient.kpidashboard.apis.model.ReleaseFilter;
 import com.publicissapient.kpidashboard.apis.model.SprintFilter;
 import com.publicissapient.kpidashboard.apis.model.TreeAggregatorDetail;
 import com.publicissapient.kpidashboard.common.constant.CommonConstant;
-import com.publicissapient.kpidashboard.common.model.application.AccountHierarchy;
-import com.publicissapient.kpidashboard.common.model.application.KanbanAccountHierarchy;
+import com.publicissapient.kpidashboard.common.model.application.ProjectHierarchy;
 import com.publicissapient.kpidashboard.common.model.jira.JiraIssue;
 import com.publicissapient.kpidashboard.common.model.jira.KanbanIssueCustomHistory;
 import com.publicissapient.kpidashboard.common.model.jira.KanbanJiraIssue;
@@ -73,24 +72,17 @@ public final class KPIHelperUtil {
 	 * Sets root filter in aggregationTreeNodeList based upon account hierarchy .
 	 *
 	 * @param aggregationTreeNodeList
-	 * @param isKanban
 	 */
-	private static List<Node> setRootFilterAndLimitHierarchy(List<Node> aggregationTreeNodeList, boolean isKanban,
-			String firstLevel, int level) {
+	private static List<Node> setRootFilterAndLimitHierarchy(List<Node> aggregationTreeNodeList, String firstLevel,
+			int level) {
 		List<Node> filteredNode = new ArrayList<>();
 		String rootId = Constant.SPEEDY_ROOT;
-		if (isKanban) {
-			aggregationTreeNodeList
-					.add(new Node(0, rootId, rootId, null, Filters.ROOT.name(), new KanbanAccountHierarchy()));
-		} else {
-			aggregationTreeNodeList.add(new Node(0, rootId, rootId, null, Filters.ROOT.name(), new AccountHierarchy()));
-		}
+		aggregationTreeNodeList.add(new Node(0, rootId, rootId, null, Filters.ROOT.name(), new ProjectHierarchy()));
 
 		aggregationTreeNodeList.stream().filter(node -> node.getGroupName().equalsIgnoreCase(firstLevel))
 				.forEach(node -> node.setParentId(rootId));
 		if (level > 0) {
-			filteredNode = aggregationTreeNodeList.stream().filter(node -> node.getLevel() <= level)
-					.collect(Collectors.toList());
+			filteredNode = aggregationTreeNodeList.stream().filter(node -> node.getLevel() <= level).toList();
 		}
 		return filteredNode;
 	}
@@ -99,12 +91,11 @@ public final class KPIHelperUtil {
 	 * Create a n-ary tree from the list of filtered nodes.
 	 *
 	 * @param nodes
-	 *            of filtered nodes as per UI filter
+	 *          of filtered nodes as per UI filter
 	 * @param mapTmp
-	 *            is a temporary map which holds value (Node) of child nodes.
+	 *          is a temporary map which holds value (Node) of child nodes.
 	 * @return root of the tree
 	 */
-
 	public static Node createTree(List<Node> nodes, Map<String, Node> mapTmp) {
 		// Save all nodes to a map
 		Node root = nodes.parallelStream().filter(node -> node.getId().equalsIgnoreCase(Constant.SPEEDY_ROOT)).findAny()
@@ -116,8 +107,8 @@ public final class KPIHelperUtil {
 
 			while (!nodeQueue.isEmpty()) {
 				Node currentNode = nodeQueue.poll();
-				Set<Node> nodesList = nodes.parallelStream().filter(
-						node -> node.getParentId() != null && node.getParentId().equalsIgnoreCase(currentNode.getId()))
+				Set<Node> nodesList = nodes.parallelStream()
+						.filter(node -> node.getParentId() != null && node.getParentId().equalsIgnoreCase(currentNode.getId()))
 						.collect(Collectors.toSet());
 				List<Node> list = new ArrayList<>(nodesList);
 				currentNode.setChildren(list);
@@ -130,28 +121,22 @@ public final class KPIHelperUtil {
 			}
 		}
 		return root;
-
 	}
 
 	private static void addProjectFilter(Node node) {
 		if (node.getGroupName().equalsIgnoreCase(CommonConstant.HIERARCHY_LEVEL_ID_PROJECT)) {
-			if (isAccountHierarchyData(node)) {
-				node.setProjectFilter(new ProjectFilter(node.getId(), node.getName(),
-						node.getAccountHierarchy().getBasicProjectConfigId()));
-			} else {
-				node.setProjectFilter(new ProjectFilter(node.getId(), node.getName(),
-						node.getAccountHierarchyKanban().getBasicProjectConfigId()));
-			}
+			node.setProjectFilter(
+					new ProjectFilter(node.getId(), node.getName(), node.getProjectHierarchy().getBasicProjectConfigId()));
 		} else if (node.getGroupName().equalsIgnoreCase(CommonConstant.HIERARCHY_LEVEL_ID_SPRINT)) {
 			node.setProjectFilter(new ProjectFilter(node.getParent().getId(), node.getParent().getName(),
-					node.getAccountHierarchy().getBasicProjectConfigId()));
-			node.setSprintFilter(new SprintFilter(node.getId(), node.getName(),
-					node.getAccountHierarchy().getBeginDate(), node.getAccountHierarchy().getEndDate()));
+					node.getProjectHierarchy().getBasicProjectConfigId()));
+			node.setSprintFilter(new SprintFilter(node.getId(), node.getName(), node.getProjectHierarchy().getBeginDate(),
+					node.getProjectHierarchy().getEndDate()));
 		} else if (node.getGroupName().equalsIgnoreCase(CommonConstant.HIERARCHY_LEVEL_ID_RELEASE)) {
 			node.setProjectFilter(new ProjectFilter(node.getParent().getId(), node.getParent().getName(),
-					node.getAccountHierarchy().getBasicProjectConfigId()));
-			node.setReleaseFilter(new ReleaseFilter(node.getId(), node.getName(),
-					node.getAccountHierarchy().getBeginDate(), node.getAccountHierarchy().getEndDate()));
+					node.getProjectHierarchy().getBasicProjectConfigId()));
+			node.setReleaseFilter(new ReleaseFilter(node.getId(), node.getName(), node.getProjectHierarchy().getBeginDate(),
+					node.getProjectHierarchy().getEndDate()));
 		}
 	}
 
@@ -159,12 +144,12 @@ public final class KPIHelperUtil {
 	 * Returns the list of leaf nodes for which KPI value has to be calculated.
 	 *
 	 * @param node
-	 *            the node
+	 *          the node
 	 * @param leafNodeList
-	 *            list of leaf nodes in the created tree
+	 *          list of leaf nodes in the created tree
 	 * @return leaf nodes
 	 */
-	public static List<Node> getLeafNodes(Node node, List<Node> leafNodeList) {
+	public static List<Node> getLeafNodes(Node node, List<Node> leafNodeList, boolean isKanban) {
 
 		if (null == node) {
 			return Collections.emptyList();
@@ -172,16 +157,15 @@ public final class KPIHelperUtil {
 
 		if (node.getChildren().isEmpty()) {
 
-			if (isAccountHierarchyData(node)) {
-				Node newNode = new Node(node.getValue(), node.getId(), node.getName(), node.getParentId(),
-						node.getGroupName(), node.getAccountHierarchy(), node.getProjectFilter(),
-						node.getSprintFilter(), node.getReleaseFilter());
-				leafNodeList.add(newNode);
-			} else if (isAccountHierarchyDataKanban(node)) {
-				Node newNode = new Node(node.getValue(), node.getId(), node.getName(), node.getParentId(),
-						node.getGroupName(), node.getAccountHierarchyKanban(), node.getProjectFilter());
-				leafNodeList.add(newNode);
+			Node newNode;
+			if (!isKanban) {
+				newNode = new Node(node.getValue(), node.getId(), node.getName(), node.getParentId(), node.getGroupName(),
+						node.getProjectHierarchy(), node.getProjectFilter(), node.getSprintFilter(), node.getReleaseFilter());
+			} else {
+				newNode = new Node(node.getValue(), node.getId(), node.getName(), node.getParentId(), node.getGroupName(),
+						node.getProjectHierarchy(), node.getProjectFilter());
 			}
+			leafNodeList.add(newNode);
 		}
 
 		List<Node> children = node.getChildren();
@@ -203,54 +187,44 @@ public final class KPIHelperUtil {
 					});
 					child.setChildren(sortedChildNodes);
 				}
-				getLeafNodes(child, leafNodeList);
+				getLeafNodes(child, leafNodeList, isKanban);
 			}
 		}
 
 		return leafNodeList;
-
-	}
-
-	/**
-	 * Checks for account hierarchy data
-	 *
-	 * @param node
-	 * @return
-	 */
-	private static boolean isAccountHierarchyData(Node node) {
-		return null != node.getAccountHierarchy();
 	}
 
 	/**
 	 * Returns the leaf node grouped by filters and the root of created tree.
 	 *
 	 * @param kpiRequest
-	 *            the kpi request
+	 *          the kpi request
 	 * @param filteredAccountDataList
-	 *            the filtered account data list
+	 *          the filtered account data list
 	 * @param filteredAccountDataKanban
-	 *            the filtered account data kanban
+	 *          the filtered account data kanban
 	 * @return tree leaf nodes grouped by filter
 	 * @throws ApplicationException
-	 *             the application exception
+	 *           the application exception
 	 */
 	public static TreeAggregatorDetail getTreeLeafNodesGroupedByFilter(KpiRequest kpiRequest,
-			List<AccountHierarchyData> filteredAccountDataList,
-			List<AccountHierarchyDataKanban> filteredAccountDataKanban, String firstLevel, int leafNodeLevel)
-			throws ApplicationException {
+			List<AccountHierarchyData> filteredAccountDataList, List<AccountHierarchyDataKanban> filteredAccountDataKanban,
+			String firstLevel, int leafNodeLevel) throws ApplicationException {
 
 		Map<String, Node> mapTmp = new HashMap<>();
 		List<Node> aggregatedTreeNodeList = new ArrayList<>();
 		List<Node> filteredNode = null;
 		Node root = null;
+		boolean isKanban = false;
 		if (CollectionUtils.isNotEmpty(filteredAccountDataList)) {
 			filteredAccountDataList.forEach(data -> cloneNode(data.getNode(), aggregatedTreeNodeList));
-			filteredNode = setRootFilterAndLimitHierarchy(aggregatedTreeNodeList, false, firstLevel, leafNodeLevel);
+			filteredNode = setRootFilterAndLimitHierarchy(aggregatedTreeNodeList, firstLevel, leafNodeLevel);
 		} else if (CollectionUtils.isNotEmpty(filteredAccountDataKanban)) {
+			isKanban = true;
 			filteredAccountDataKanban.forEach(data -> cloneNode(data.getNode(), aggregatedTreeNodeList));
-			filteredNode = setRootFilterAndLimitHierarchy(aggregatedTreeNodeList, true, firstLevel, leafNodeLevel);
+			filteredNode = setRootFilterAndLimitHierarchy(aggregatedTreeNodeList, firstLevel, leafNodeLevel);
 		}
-		
+
 		if (CollectionUtils.isNotEmpty(filteredNode)) {
 			root = createTree(filteredNode, mapTmp);
 		}
@@ -263,13 +237,16 @@ public final class KPIHelperUtil {
 
 		List<Node> leafNodeList = new ArrayList<>();
 		List<Node> projectNodeList = new ArrayList<>();
-		getLeafNodes(root, leafNodeList);
-		getProjectNodes(root, projectNodeList);
+		getLeafNodes(root, leafNodeList, isKanban);
+		getProjectNodes(root, projectNodeList, isKanban);
 
 		log.debug("[LEAF_NODES][{}]. Leaf nodes of the tree {}", kpiRequest.getRequestTrackerId(), leafNodeList);
 
 		Map<String, List<Node>> result = leafNodeList.stream().distinct()
 				.collect(Collectors.groupingBy(Node::getGroupName, Collectors.toList()));
+		List<Node> nodeList = new ArrayList<>(
+				result.getOrDefault(CommonConstant.HIERARCHY_LEVEL_ID_SPRINT, new ArrayList<>()));
+		result.put(CommonConstant.SPRINT_MASTER, nodeList);
 		Map<String, List<Node>> projectMap = projectNodeList.stream().distinct()
 				.collect(Collectors.groupingBy(Node::getGroupName, Collectors.toList()));
 		return new TreeAggregatorDetail(root, result, mapTmp, projectMap);
@@ -283,9 +260,9 @@ public final class KPIHelperUtil {
 	 * Distinct by key predicate.
 	 *
 	 * @param <T>
-	 *            the type parameter
+	 *          the type parameter
 	 * @param keyExtractor
-	 *            the key extractor
+	 *          the key extractor
 	 * @return predicate
 	 */
 	public static <T> Predicate<T> distinctByKey(Function<? super T, ?> keyExtractor) {
@@ -297,12 +274,12 @@ public final class KPIHelperUtil {
 	 * Returns the list of project nodes for which KPI value has to be calculated.
 	 *
 	 * @param node
-	 *            the node
+	 *          the node
 	 * @param projectNodeList
-	 *            list of leaf nodes in the created tree
+	 *          list of leaf nodes in the created tree
 	 * @return project nodes
 	 */
-	public static List<Node> getProjectNodes(Node node, List<Node> projectNodeList) {
+	public static List<Node> getProjectNodes(Node node, List<Node> projectNodeList, boolean isKanban) {
 
 		if (null == node) {
 			return Collections.emptyList();
@@ -310,14 +287,13 @@ public final class KPIHelperUtil {
 
 		if (Constant.PROJECT.equalsIgnoreCase(node.getGroupName())) {
 
-			if (isAccountHierarchyData(node)) {
-				Node newNode = new Node(node.getValue(), node.getId(), node.getName(), node.getParentId(),
-						node.getGroupName(), node.getAccountHierarchy(), node.getProjectFilter(),
-						node.getSprintFilter());
+			if (!isKanban) {
+				Node newNode = new Node(node.getValue(), node.getId(), node.getName(), node.getParentId(), node.getGroupName(),
+						node.getProjectHierarchy(), node.getProjectFilter(), node.getSprintFilter());
 				projectNodeList.add(newNode);
-			} else if (isAccountHierarchyDataKanban(node)) {
-				Node newNode = new Node(node.getValue(), node.getId(), node.getName(), node.getParentId(),
-						node.getGroupName(), node.getAccountHierarchyKanban(), node.getProjectFilter());
+			} else {
+				Node newNode = new Node(node.getValue(), node.getId(), node.getName(), node.getParentId(), node.getGroupName(),
+						node.getProjectHierarchy(), node.getProjectFilter());
 				projectNodeList.add(newNode);
 			}
 		}
@@ -325,22 +301,11 @@ public final class KPIHelperUtil {
 		List<Node> children = node.getChildren();
 		for (Node child : children) {
 			if (child.getChildren() != null) {
-				getProjectNodes(child, projectNodeList);
+				getProjectNodes(child, projectNodeList, isKanban);
 			}
 		}
 
 		return projectNodeList;
-
-	}
-
-	/**
-	 * Checks for account hierarchy data kanban
-	 *
-	 * @param node
-	 * @return
-	 */
-	private static boolean isAccountHierarchyDataKanban(Node node) {
-		return null != node.getAccountHierarchyKanban();
 	}
 
 	public static Map<String, Long> setpriorityScrum(List<JiraIssue> sprintWiseDefectDataList,
@@ -358,8 +323,7 @@ public final class KPIHelperUtil {
 				p5Count++;
 				priorityCountMap.put(Constant.MISC, p5Count);
 			} else {
-				if (StringUtils.containsIgnoreCase(
-						customApiConfig.getpriorityP1().replaceAll(Constant.WHITESPACE, "").trim(),
+				if (StringUtils.containsIgnoreCase(customApiConfig.getpriorityP1().replaceAll(Constant.WHITESPACE, "").trim(),
 						issue.getPriority().replaceAll(Constant.WHITESPACE, "").toLowerCase().trim())) {
 					p1Count++;
 					priorityCountMap.put(Constant.P1, p1Count);
@@ -486,5 +450,4 @@ public final class KPIHelperUtil {
 			return Constant.MISC;
 		}
 	}
-
 }
